--- a/app/views/shared/_navbar_mobile.html.erb
+++ b/app/views/shared/_navbar_mobile.html.erb
@@ -1,3 +1,3 @@
-<div class="navbar-wagon">
-
+<div class="navbar-mobile d-flex justify-content-center">
+  <i class="fas fa-question-circle"></i>&nbsp;Quiz App
 </div>
