Add game creation feature

--- a/app/views/players/quizzes/show.html.erb
+++ b/app/views/players/quizzes/show.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <%= link_to "C'est parti!", "#", class: "btn btn-primary btn-lg btn-block" %>
+      <%= link_to "C'est parti!", players_quiz_games_path(@quiz), method: :post, class: "btn btn-primary btn-lg btn-block" %>
     </div>
   </div>
 </div>
