--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -6,7 +6,7 @@
     <div class="col-6 d-flex justify-content-around">
       <p>
         <i class="fas fa-film"></i>
-        <%= @quiz.room %>
+        Salle <%= @quiz.room %>
       </p>
       <p>
         <i class="far fa-user"></i>
@@ -19,17 +19,23 @@
       <table class="table">
         <thead class="thead-light">
           <tr>
+            <th scope="col">Email</th>
             <th scope="col">Nom</th>
-            <th scope="col">Numéro de salle</th>
-            <th scope="col">Récompense</th>
-            <th scope="col">Participants</th>
-            <th scope="col">Date de création</th>
+            <th scope="col">Prénom</th>
+            <th scope="col">Numéro</th>
+            <th scope="col">Score</th>
+            <th scope="col">Participations</th>
           </tr>
         </thead>
         <tbody>
           <% @quiz.players.each do |player| %>
               <tr>
-                <td><%= player.name %></td>
+                <td><%= player.email %></td>
+                <td><%= player.last_name || "Non renseigné"%></td>
+                <td><%= player.first_name || "Non renseigné"%></td>
+                <td><%= player.phone_number || "Non renseigné"%></td>
+                <td><%= player.games.find_by(quiz: @quiz).score %></td>
+                <td><%= player.games.count %></td>
               </tr>
           <% end %>
         </tbody>
