--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <%= render 'shared/navbar' if @desktop %>
     <%= render 'shared/navbar_mobile' unless @desktop %>
-    <%= render 'shared/flashes' %>
+    <%= render 'shared/flashes' if @desktop %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
