--- a/app/views/players/quizzes/show.html.erb
+++ b/app/views/players/quizzes/show.html.erb
@@ -1,17 +1,15 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
-      <h1>Welcome to the game</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia ab ipsum similique inventore beatae nulla maiores distinctio minus, impedit corporis, laborum dolorem voluptatum saepe asperiores quo accusamus quam tempora ad!</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <%= link_to "C'est parti!", players_quiz_games_path(@quiz), method: :post, class: "btn btn-primary btn-lg btn-block" %>
+  <div class="mobile-container d-flex flex-column justify-content-center">
+    <div class="row justify-content-center">
+      <div class="col-10 col-sm-8 col-md-6 col-lg-5">
+      <h3 class="text-center">A gagner aujourd'hui</h3>
+        <ul class="list-unstyled mt-5 mb-5">
+          <li>1 invitation à l'avant-première de <strong>Roma</strong></li>
+          <li>1 place de cinéma</li>
+          <li>1 menu pop corn</li>
+        </ul>
+        <%= link_to "LANCER LE QUIZ", players_quiz_games_path(@quiz), method: :post, class: "btn btn-primary btn-lg btn-block" %>
+      </div>
     </div>
   </div>
 </div>
