Change devise redirection logic

--- a/app/views/players/registrations/new.html.erb
+++ b/app/views/players/registrations/new.html.erb
@@ -14,7 +14,7 @@
                   input_html: { autocomplete: "email" },
                   label: false,
                   placeholder: "Email"%>
-      <%= f.input :quizz_id, as: :hidden, input_html: { value: @quizz_id } %>
+      <%= f.input :quiz, as: :hidden, input_html: { value: @quiz } %>
     </div>
 
     <div class="form-actions text-center mt-4">
