--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "config/colors";
 @import "config/bootstrap_variables";
 @import "config/mobile_utilities";
+@import "config/utilities";
 
 // External libraries
 @import "bootstrap";
