--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
-    <%= render 'shared/navbar' if @desktop %>
-    <%= render 'shared/navbar_mobile' unless @desktop %>
+    <% unless @no_nav %>
+      <%= render 'shared/navbar' if @desktop %>
+      <%= render 'shared/navbar_mobile' unless @desktop %>
+    <% end %>
     <%= render 'shared/flashes' %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
