--- a/app/views/players/games/show.html.erb
+++ b/app/views/players/games/show.html.erb
@@ -1,1 +1,38 @@
-THis is the first question
+<!-- VRAI / FAUX -->
+<!-- <div class="container">
+  <div class="container mobile-container d-flex flex-column justify-content-center">
+    <h5 class="text-center mb-5">
+      Votre fauteuil est il confortable
+    </h5>
+    <div class="row justify-content-center">
+      <div class="col-10 col-sm-8 col-md-6 col-lg-4">
+        <div class="d-flex justify-content-around">
+          <button class="btn btn-success btn-lg btn-vrai-faux">OUI</button>
+          <button class="btn btn-danger btn-lg btn-vrai-faux">NON</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<!-- QCM -->
+<div class="container">
+  <div class="container mobile-container d-flex flex-column justify-content-center">
+    <h5 class="text-center mb-5">
+      Dans « Astérix et Le secret de la Potion magique », qui fait la voix de Astérix ?
+    </h5>
+    <div class="row justify-content-center">
+      <div class="col-10 col-sm-8 col-md-6 col-lg-4">
+        <button class="btn btn-info btn-lg btn-block my-2">
+          Guillaume Briat
+        </button>
+        <button class="btn btn-info btn-lg btn-block my-2">
+          Daniel Mesguich
+        </button>
+        <button class="btn btn-info btn-lg btn-block my-2">
+          Christian Clavier
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
