--- a/app/views/players/games/show.html.erb
+++ b/app/views/players/games/show.html.erb
@@ -8,7 +8,12 @@
     <div class="col">
       <ul>
         <% @question.answers.each do |answer| %>
-          <li><%= link_to answer.content, "#", class: "btn btn-primary", method: :post %></li>
+          <li>
+            <%= simple_form_for([:players, @game, @game_answer]) do |f| %>
+              <%= f.input :answer_id, as: :hidden, input_html: { value: answer.id } %>
+              <%= f.submit answer.content, class: "btn btn-primary" %>
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </div>
