game show front basic

--- a/app/assets/stylesheets/components/_navbar_mobile.scss
+++ b/app/assets/stylesheets/components/_navbar_mobile.scss
@@ -1,13 +1,12 @@
 .navbar-mobile {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
-  transition: all 0.3s ease;
+  box-shadow: 0 6px 20px 0 rgba(0,0,0,.19);
+  background: $info;
   height: 50px;
-  padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: fixed;
   top: 0;
   width: 100%;
+  color: white;
 }
