--- a/app/views/players/quizzes/show.html.erb
+++ b/app/views/players/quizzes/show.html.erb
@@ -8,7 +8,7 @@
           <li>1 place de cinéma</li>
           <li>1 menu pop corn</li>
         </ul>
-        <%= link_to "LANCER LE QUIZ", players_quiz_games_path(@quiz), method: :post, class: "btn btn-primary btn-lg btn-block" %>
+        <%= link_to "LANCER LE QUIZ", players_quiz_games_path(@quiz), method: :post, class: "btn btn-info btn-lg btn-block" %>
       </div>
     </div>
   </div>
