--- a/app/assets/stylesheets/config/_mobile_utilities.scss
+++ b/app/assets/stylesheets/config/_mobile_utilities.scss
@@ -1,7 +1,10 @@
 .mobile-container {
-  min-height: calc(100vh - 70px);
+  min-height: calc(100vh - 50px);
 }
 
-.btn-vrai-faux {
-  min-width: 96px;
+.btn {
+  box-shadow: 0 6px 20px 0 rgba(0,0,0,.19);
+  &:active {
+    box-shadow: 0 6px 20px 0 rgba(0,0,0,.19);
+  }
 }
