--- a/app/views/players/registrations/new.html.erb
+++ b/app/views/players/registrations/new.html.erb
@@ -19,7 +19,7 @@
             <%= f.input :quiz, as: :hidden, input_html: { value: @quiz } %>
           </div>
           <div class="form-actions text-center mt-4">
-            <%= f.button :submit, "SUIVANT", class: "btn btn-primary btn-lg btn-block" %>
+            <%= f.button :submit, "SUIVANT", class: "btn btn-info btn-lg btn-block" %>
           </div>
         <% end %>
       </div>
