leaderboard basic design, seeds and gradient

--- a/app/assets/stylesheets/config/_mobile_utilities.scss
+++ b/app/assets/stylesheets/config/_mobile_utilities.scss
@@ -1,5 +1,11 @@
 .mobile-container {
-  min-height: calc(100vh - 50px);
+  min-height: 100vh;
+  // fallback for old browsers
+  background: #1488CC;
+  // Chrome 10-25, Safari 5.1-6
+  background: -webkit-linear-gradient(to top, #2B32B2, #1488CC);
+  // W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
+  background: linear-gradient(to top, #2B32B2, #1488CC);
 }
 
 .btn {
