Broadcast live players number

--- a/app/views/players/registrations/new.html.erb
+++ b/app/views/players/registrations/new.html.erb
@@ -26,3 +26,4 @@
     </div>
   <%#= render "players/shared/links" %>
 </div>
+<%= render 'shared/players_counter', quiz: Quiz.find(params[:quiz]) %>
