--- a/app/views/players/results/index.html.erb
+++ b/app/views/players/results/index.html.erb
@@ -1,26 +1,23 @@
-<div class="container">
-  <div class="mobile-container d-flex flex-column justify-content-center">
-    <h3 class="text-center text-info pb-4">
-      Classement
-    </h3>
-    <table class="table">
-      <thead class="thead-light">
+<div class="container mobile-container d-flex flex-column justify-content-center">
+  <h3 class="text-center text-white pb-4">
+    Résultats
+  </h3>
+  <table class="table table-sm">
+    <thead class="thead-light">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Joueur</th>
+        <th scope="col">Score</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @games.each_with_index do |game, index| %>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Player</th>
-          <th scope="col">Score</th>
+          <th scope="row"><%= index + 1 %></th>
+          <td><%= game.player.email.split('@')[0] %></td>
+          <td><%= game.score %></td>
         </tr>
-      </thead>
-      <tbody>
-        <% @games.each_with_index do |game, index| %>
-          <tr>
-            <th scope="row"><%= index + 1 %></th>
-            <td><%= game.player.email %></td>
-            <td><%= game.score %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    <h4 class="text-center text-info mt-1">Eteignez votre téléphone,<br>la séance va commencer !</h4>
-  </div>
+      <% end %>
+    </tbody>
+  </table>
 </div>
