css fixes and favicon

--- a/app/views/players/quizzes/show.html.erb
+++ b/app/views/players/quizzes/show.html.erb
@@ -10,7 +10,7 @@
           <strong>1</strong> place de cinéma
         </li>
         <li>
-          <strong>1</strong> menu pop corn
+          <strong>1</strong> menu pop-corn
         </li>
       </ul>
       <%= link_to "LANCER LE QUIZ", players_quiz_games_path(@quiz), method: :post, class: "btn btn-light btn-lg btn-block" %>
