--- a/app/assets/stylesheets/config/_mobile_utilities.scss
+++ b/app/assets/stylesheets/config/_mobile_utilities.scss
@@ -1,5 +1,14 @@
+.background-player {
+  background: #1488CC;
+  // Chrome 10-25, Safari 5.1-6
+  background: -webkit-linear-gradient(to top, #2B32B2, #1488CC);
+  // W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
+  background: linear-gradient(to top, #2B32B2, #1488CC);
+}
+
 .mobile-container {
   min-height: 100vh;
+  // fallback for old browsers
   .btn {
     box-shadow: 0 6px 20px 0 rgba(0,0,0,.19);
     &:active {
@@ -16,17 +25,8 @@
   }
   tbody {
     font-weight: 100;
-    th {
-      color: white;
-    }
     tr {
       color: whitesmoke;
     }
   }
-  // fallback for old browsers
-  background: #1488CC;
-  // Chrome 10-25, Safari 5.1-6
-  background: -webkit-linear-gradient(to top, #2B32B2, #1488CC);
-  // W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
-  background: linear-gradient(to top, #2B32B2, #1488CC);
 }
