--- a/app/views/players/results/index.html.erb
+++ b/app/views/players/results/index.html.erb
@@ -13,7 +13,7 @@
     <tbody>
       <% @games.each_with_index do |game, index| %>
         <tr>
-          <th scope="row"><%= index + 1 %></th>
+          <th scope="row" class="text-white"><%= index + 1 %></th>
           <td><%= game.player.email.split('@')[0] %></td>
           <td><%= game.score %></td>
         </tr>
