--- a/app/views/quizzes/qr.html.erb
+++ b/app/views/quizzes/qr.html.erb
@@ -1,4 +1,11 @@
 <div id="qr_code">
-  <%= @qr_code.as_svg.html_safe %>
+  <div class="qr_square">
+    <%= @qr_code.as_svg.html_safe %>
+  </div>
+  <div class="qr-instructions">
+    <h5 class="text-white mb-5">
+      Scannez ce Code QR et gagnez une place de cinéma.
+    </h5>
+    <%= image_tag 'hand-hold-smart-phone-scanning-qr-code-icon-vector-18307815', height: '100%', class: 'qr-instructions-img' %>
+  </div>
 </div>
-
