--- a/app/views/shared/_players_counter.html.erb
+++ b/app/views/shared/_players_counter.html.erb
@@ -1,4 +1,4 @@
 <div id="player-counter" data-quiz-id="<%= quiz.id %>">
   <div class="number"><%= quiz.live_players %></div>
-  <p>players</p>
+  <p><%= pluralize(quiz.live_players, 'joueur', 'joueurs').split(' ')[1] %></p>
 </div>
