--- a/app/views/quizzes/qr.html.erb
+++ b/app/views/quizzes/qr.html.erb
@@ -6,6 +6,6 @@
     <h5 class="text-white mb-5">
       Scannez ce Code QR et gagnez une place de cinéma.
     </h5>
-    <%= image_tag 'hand-hold-smart-phone-scanning-qr-code-icon-vector-18307815', height: '100%', class: 'qr-instructions-img' %>
+    <%= image_tag 'hand.jpg', height: '100%', class: 'qr-instructions-img' %>
   </div>
 </div>
