--- a/app/assets/stylesheets/layouts/_qr.scss
+++ b/app/assets/stylesheets/layouts/_qr.scss
@@ -3,24 +3,24 @@
   // svg rect {
   //   fill: white !important;
   // }
+  display: flex;
+  justify-content: space-evenly;
   .qr_square {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 563px;
-    height: 563px;
+    width: 512px;
+    height: 512px;
     background-color: white;
     border-radius: 5%;
   }
   .qr-instructions {
-    position: absolute;
-    bottom: 30%;
-    left: 13%;
-    width: 192px;
-    height: 192px;
+    width: 366px;
     border-radius: 5%;
+    margin-top: 5%;
     .qr-instructions-img {
-      border-radius: 5%;
+      border-radius: 10%;
+      height: 192px;
     }
   }
   // fallback for old browsers
