--- a/app/views/players/quizzes/show.html.erb
+++ b/app/views/players/quizzes/show.html.erb
@@ -1,16 +1,10 @@
 <div class="container mobile-container d-flex flex-column justify-content-center">
   <div class="row justify-content-center">
     <div class="col-10 col-sm-8 col-md-6 col-lg-5 text-center">
-    <h3 class="text-light">A gagner aujourd'hui</h3>
+    <h1 class="text-light">Prêt à jouer ?</h1>
       <ul class="list-unstyled mt-5 mb-5">
         <li>
-          <strong>1</strong> invit' à l'avant-première de <strong>Roma</strong>
-        </li>
-        <li>
-          <strong>1</strong> place de cinéma
-        </li>
-        <li>
-          <strong>1</strong> menu pop-corn
+          <p>Une place pour l'avant-première de <strong>Le grand bain</strong> à gagner !</p>
         </li>
       </ul>
       <%= link_to "LANCER LE QUIZ", players_quiz_games_path(@quiz), method: :post, class: "btn btn-light btn-lg btn-block" %>
