--- a/app/assets/stylesheets/components/_player_counter.scss
+++ b/app/assets/stylesheets/components/_player_counter.scss
@@ -4,8 +4,8 @@ div#player-counter {
   right: 15px;
   background: #F8F9FA;
   border-radius: 10%;
-  width: 72px;
-  height: 72px;
+  width: 64px;
+  height: 64px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,11 +14,12 @@ div#player-counter {
   box-shadow: 0 6px 20px 0 rgba(0,0,0,.19);
 
   .number {
-    font-size: 1.68em;
+    font-size: 1.5em;
     line-height: 1;
   }
 
   p {
     margin-bottom: 0;
+    font-size: 14px;
   }
 }
