--- a/app/assets/stylesheets/config/_mobile_utilities.scss
+++ b/app/assets/stylesheets/config/_mobile_utilities.scss
@@ -15,6 +15,14 @@
       box-shadow: 0 6px 20px 0 rgba(0,0,0,.19);
     }
   }
+  .quiz-img {
+    background-size: cover;
+    background-position: center;
+    height: 128px;
+    width: 128px;
+    border-radius: 5%;
+    box-shadow: 0 6px 20px 0 rgba(0,0,0,.19);
+  }
   ul {
     color: whitesmoke;
     font-weight: 100;
@@ -30,3 +38,4 @@
     }
   }
 }
+
