--- a/app/views/quizzes/qr.html.erb
+++ b/app/views/quizzes/qr.html.erb
@@ -1,8 +1,8 @@
 <div id="qr_code">
   <div class="qr-instructions">
-    <h5 class="text-white mb-5">
-      Scannez ce <code>QR-Code</code> et tentez de gagner une place de cinéma
-    </h5>
+    <h1 class="text-white mb-5">
+      Scannez ce <code>QR-Code</code> et tentez de gagner une place de cinéma.
+    </h1>
     <%= image_tag 'hand.jpg', height: '100%', class: 'qr-instructions-img' %>
   </div>
   <div class="qr_square">
