fix action cable

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,6 @@
     <%= render 'shared/flashes' if @desktop  %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
+    <%= javascript_pack_tag 'action_cable' %>
   </body>
 </html>
