--- a/app/views/layouts/player.html.erb
+++ b/app/views/layouts/player.html.erb
@@ -13,5 +13,6 @@
   <body class="background-player">
     <%= yield %>
     <%= javascript_include_tag 'application' %>
+    <%= javascript_pack_tag 'action_cable' %>
   </body>
 </html>
