--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,39 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h1>CinePursuit</h1>
-      <p>Interagissez avec vos spectateurs, dans la salle de cinéma</p>
+<div class="background-landing">
+  <div class="navbar mb-5">
+    <div style="padding-top: 8px;">
+      <%= link_to root_path do %>
+        <%= image_tag 'logo.png', height: 64 %>
+      <% end %>
+    </div>
+    <div class="pr-3" style="font-weight: 100;">
+      <%= link_to 'Login', new_user_session_path, class: 'text-light' %>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
-      <h5>Vous etes interressés? Laissez nous vous tenir au courant.</h5>
-      <%= simple_form_for(Lead.new) do |f| %>
-        <%= f.input :email, require: true %>
-        <%= f.submit %>
-      <% end %>
+  <div class="container text-center text-white">
+    <div class="d-flex flex-column align-items-center">
+      <!-- <div class="col-6"> -->
+        <%#= image_tag 'logo.png', height: 256, width: 256, class: 'mt-5 mb-4' %>
+        <h1 class="mb-3 pr-2" style="font-size: 64px;">
+          <em>CinePursuit</em>
+        </h1>
+        <p class="mb-5 text-light" style="font-weight: 100;">Interagissez avec vos spectateurs, <strong>dans la salle de cinéma</strong></p>
+      <!-- </div> -->
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-10 col-lg-4">
+        <h6 class="mb-4 text-light">
+          Vous êtes interressé ?<br>Laissez-nous vous tenir au courant :
+        </h6>
+        <%= simple_form_for(Lead.new) do |f| %>
+          <%= f.input :email, require: true,
+                              input_html: {
+                                class: 'form-control-lg'
+                                },
+                              label: false,
+                              placeholder: "Email" %>
+          <%= f.submit "Envoyer", class: "btn btn-light btn-lg btn-block" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
