--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -22,7 +22,7 @@
             <th scope="col">Email</th>
             <th scope="col">Nom</th>
             <th scope="col">Prénom</th>
-            <th scope="col">Numéro</th>
+            <th scope="col">Localisation</th>
             <th scope="col">Score</th>
             <th scope="col">Participations</th>
           </tr>
@@ -33,7 +33,7 @@
                 <td><%= player.email %></td>
                 <td><%= player.last_name || "Non renseigné"%></td>
                 <td><%= player.first_name || "Non renseigné"%></td>
-                <td><%= player.phone_number || "Non renseigné"%></td>
+                <td><%= player.location || "Non renseigné"%></td>
                 <td><%= player.games.find_by(quiz: @quiz).score %></td>
                 <td><%= player.games.count %></td>
               </tr>
