--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -4,7 +4,7 @@
       <h1>All quizzes</h1>
     </div>
     <div class="col-6">
-      <%= link_to "New Quiz", "New Quiz", class: "btn btn-primary" %>
+      <%= link_to "New Quiz", "#", class: "btn btn-primary float-right" %>
     </div>
   </div>
   <div class="row">
