--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container mt-4">
-  <div class="row">
+  <div class="row mb-2">
     <div class="col-6">
       <h1>Quiz <%= @quiz.name %></h1>
     </div>
-    <div class="col-6 d-flex justify-content-around">
+    <div class="col-6 d-flex justify-content-around align-items-center">
       <p>
         <i class="fas fa-film"></i>
         Salle <%= @quiz.room %>
