--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <% unless @no_nav %>
       <%= render 'shared/navbar' if @desktop %>
     <% end %>
-    <%= render 'shared/flashes' if @desktop  %>
+    <%#= render 'shared/flashes' if @desktop  %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'action_cable' %>
