--- a/app/views/players/games/show.html.erb
+++ b/app/views/players/games/show.html.erb
@@ -2,7 +2,9 @@
   class="container mobile-container d-flex flex-column justify-content-center"
   data-controller="answers"
 >
-  <div class="ml-auto mr-auto mb-4 quiz-img" style="background-image: url('<%= image_path @question.picture %>')"></div>
+  <% if @question.picture.present? %>
+    <div class="ml-auto mr-auto mb-4 quiz-img" style="background-image: url('<%= image_path @question.picture %>')"></div>
+  <% end %>
   <h5 class="text-center text-light mb-4">
     <%= @question.content %>
   </h5>
