Display confort in bcnmkl

--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -12,6 +12,10 @@
         <i class="far fa-user"></i>
         <%= @quiz.games.count %> participant
       </p>
+      <p>
+        <i class="far fa-user"></i>
+        Confort: <%= @quiz.good_confort_percentage %> %
+      </p>
     </div>
   </div>
   <div class="row">
