--- a/app/views/layouts/player.html.erb
+++ b/app/views/layouts/player.html.erb
@@ -10,9 +10,37 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
     <%= javascript_pack_tag 'application' %>
   </head>
-  <body class="background-player" id="player_screen" data-current-player-id="<%= current_player.id %>">
-    <%= yield %>
+  <% quiz = Quiz.find_by(playable: true) %>
+  <body class="background-player" id="player_screen" data-current-player-id="<%= current_player&.id %>" data-quiz-id="<%= quiz.id %>">
+    <% if quiz.finish? %>
+      <%= render 'shared/end_game_screen',
+        winner_id: quiz.games.where.not(score: 0).order(score: :desc).first.player_id,
+        winner_name: quiz.games.where.not(score: 0).order(score: :desc).first.player.username
+      %>
+    <% else %>
+      <%= yield %>
+    <% end %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'action_cable' %>
   </body>
 </html>
+
+<script>
+  var container = document.getElementById('end_game_screen');
+  if(container) {
+    var current_player_id = document.getElementById('player_screen').dataset.currentPlayerId;
+    var winner_id = container.dataset.winnerId;
+    var winner_name = container.dataset.winnerName;
+    if (current_player_id === winner_id) {
+      container.innerHTML = `
+        <h1>Vous avez gagné</h1>
+        <p>Bravo ${winner_name}, rejoignez-nous sur scène pour recevoir votre cadeau</p>
+      `
+    } else {
+      container.innerHTML = `
+        <h1>Vous avez perdu</h1>
+        <p>${winner_name} a été meilleur que vous</p>
+      `
+    }
+  }
+</script>
