--- a/app/views/players/games/show.html.erb
+++ b/app/views/players/games/show.html.erb
@@ -14,7 +14,7 @@
         <%= simple_form_for([:players, @game, @game_answer], html: { id: "answer_form_#{answer.id}" }) do |f| %>
           <%= f.input :answer_id, as: :hidden, input_html: { value: answer.id } %>
           <%= f.input :start_at, as: :hidden, input_html: { value: Time.zone.now } %>
-          <%= f.submit answer.content, class: "btn btn-light btn-lg btn-block my-3 btn-answers", data: { target: "answers.button", action:"click->answers#handleClick touchstart->answers#handleClick", correct: answer.correct?, form_id: "answer_form_#{answer.id}" } %>
+          <%= f.submit answer.content, class: "btn btn-light btn-lg btn-block my-3 #{'btn-answers' unless answer.question.confort_related?}", data: { target: "answers.button", action:"click->answers#handleClick touchstart->answers#handleClick", correct: answer.correct?, form_id: "answer_form_#{answer.id}" } %>
         <% end %>
       <% end %>
     </div>
