--- a/app/views/layouts/player.html.erb
+++ b/app/views/layouts/player.html.erb
@@ -34,14 +34,24 @@
     if (current_player_id === winner_id) {
       container.classList.add('win');
       container.innerHTML = `
+        <p class="emoji">🏆</p>
         <h1>Vous avez gagné</h1>
-        <p>Bravo ${winner_name}, rejoignez-nous sur scène pour recevoir votre cadeau</p>
+        <p class="content">Bravo ${winner_name}, rejoignez-nous sur scène pour recevoir votre cadeau</p>
       `
     } else {
       container.innerHTML = `
-        <h1>Vous avez perdu</h1>
-        <p>${winner_name} a été meilleur que vous</p>
+        <p class="emoji">👏</p>
+        <h1>${winner_name} a gagné</h1>
+        <p class="content">Rendez-vous à la prochaine séance pour un nouveau quiz</p>
       `
     }
+    container.insertAdjacentHTML('beforeend', `
+      <div class="no-phone">
+        <div class="icon">📵</div>
+        <div class="message">
+          <strong>La séance va débuter</strong></br>
+          Merci d'éteindre votre téléphone</div>
+      </div>
+    `)
   }
 </script>
