dashboards basic design

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,9 +17,10 @@
 
 /* User Avatar */
 .navbar-wagon .avatar {
-  height: 35px;
-  width: 35px;
+  height: 48px;
+  width: 48px;
   border-radius: 50%;
+  box-shadow: 0 6px 20px 0 rgba(0,0,0,.19);
 }
 
 /* Right section */
