--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,16 +1,16 @@
-<div class="container mt-4">
+<div class="container mt-5">
   <div class="row">
     <div class="col-6 mb-2">
-      <h1>All quizzes</h1>
+      <h1>Quizzes</h1>
     </div>
     <div class="col-6 d-flex justify-content-end align-items-center">
-      <%= link_to "New Quiz", "#", class: "btn btn-primary" %>
+      <%= link_to "Nouveau quiz", "#", class: "btn btn-outline-primary btn-cinepursuit" %>
     </div>
   </div>
-  <div class="row">
+  <div class="row dashboard">
     <div class="col-12">
-      <table class="table">
-        <thead class="thead-light">
+      <table class="table table-dashboard-index">
+        <thead class="thead-dark">
           <tr>
             <th scope="col">Nom</th>
             <th scope="col">Numéro de salle</th>
@@ -23,10 +23,12 @@
           <% @quizzes.each do |quiz| %>
             <tr>
               <td><%= link_to quiz.name, quiz_path(quiz) %></td>
-              <td>Salle <%= quiz.room %></td>
-              <td><%= quiz.reward %></td>
-              <td><%= quiz.games.count %></td>
-              <td><%= quiz.created_at.strftime("%m/%d/%Y") %></td>
+              <td><%= link_to 'Salle '+quiz.room, quiz_path(quiz) %></td>
+              <td><%= link_to quiz.reward, quiz_path(quiz) %></td>
+              <td><%= link_to quiz.games.count, quiz_path(quiz) %></td>
+              <td>
+                <%= link_to quiz.created_at.strftime("%m/%d/%Y"), quiz_path(quiz) %>
+              </td>
             </tr>
           <% end %>
         </tbody>
