--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar mb-5">
     <div style="padding-top: 8px;">
       <%= link_to root_path do %>
-        <%= image_tag 'logo-white.png', class: 'logo' %>
+        <%= image_tag 'logo.png', class: 'logo' %>
       <% end %>
     </div>
     <div class="login pr-3">
