--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="row dashboard">
     <div class="col-12">
-      <table class="table table-dashboard-index">
+      <table class="table table-responsive-sm table-dashboard-index">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Nom</th>
