--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,6 +13,8 @@
 /* Logo */
 .navbar-wagon-brand img {
   height: 50px;
+  border-radius: 50%;
+  box-shadow: 0 5px 18px 0 rgba(0,0,0,.17);
 }
 
 /* User Avatar */
@@ -20,7 +22,7 @@
   height: 48px;
   width: 48px;
   border-radius: 50%;
-  box-shadow: 0 6px 20px 0 rgba(0,0,0,.19);
+  box-shadow: 0 5px 18px 0 rgba(0,0,0,.17);
 }
 
 /* Right section */
