--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="background-landing">
   <div class="navbar mb-5">
-    <div style="padding-top: 8px;">
+    <div class="pt-3 pl-1">
       <%= link_to root_path do %>
         <%= image_tag 'logo.png', class: 'logo' %>
       <% end %>
