--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="row dashboard">
     <div class="col-12">
-      <table class="table table-striped table-dashboard-show">
+      <table class="table table-responsive-sm table-striped table-dashboard-show">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Email</th>
@@ -54,7 +54,11 @@
           <% end %>
         </tbody>
       </table>
-      <%= link_to 'Revenir aux quizzes', quizzes_path %>
+      <%= link_to quizzes_path do %>
+        <!-- <i class="far fa-arrow-alt-circle-left"></i> -->
+        <i class="fas fa-backward"></i>
+        Retour aux quizzes
+      <% end %>
     </div>
   </div>
 </div>
