--- a/app/views/quizzes/qr.html.erb
+++ b/app/views/quizzes/qr.html.erb
@@ -1,11 +1,18 @@
-<div id="qr_code">
-  <div class="qr-instructions">
-    <h1 class="text-white mb-5">
-      Scannez ce <code>QR-Code</code> et tentez de gagner une place de cinéma.
-    </h1>
-    <%= image_tag 'hand.jpg', height: '100%', class: 'qr-instructions-img' %>
+<div class="main">
+  <div class="d-flex justify-content-center">
+    <h1 class="text-white">CinePursuit</h1>
   </div>
-  <div class="qr_square">
-    <%= @qr_code.as_svg.html_safe %>
-  </div>
+  <div id="qr_code">
+    <div class="qr-instructions">
+      <h1 class="text-white mb-2">
+        Prêt à challenger les autres spectateurs de la salle ? <br><br>
+      </h1>
+      <h2 class="text-white mb-5">A gagner: 2x places de cinéma</h2>
+      <h3 class="text-white mb-4">Scannez ce <code>QR-Code</code> pour jouer.</h3>
+      <%= image_tag 'hand.jpg', height: '100%', class: 'qr-instructions-img' %>
+    </div>
+    <div class="qr_square">
+      <%= @qr_code.as_svg.html_safe %>
+    </div>
+  </div>  
 </div>
