--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -14,7 +14,7 @@
       </p>
       <p class="mb-2">
         <i class="fas fa-couch"></i>
-        Confort: <%= @quiz.good_confort_percentage %>%
+        Satisfaction: <%= @quiz.good_confort_percentage %>%
       </p>
     </div>
   </div>
@@ -27,7 +27,7 @@
             <th scope="col">Nom</th>
             <th scope="col">Prénom</th>
             <th scope="col">Localisation</th>
-            <th scope="col">Confort</th>
+            <th scope="col">Satisfaction</th>
             <th scope="col">Score</th>
           </tr>
         </thead>
