--- a/app/assets/stylesheets/layouts/_qr.scss
+++ b/app/assets/stylesheets/layouts/_qr.scss
@@ -1,3 +1,8 @@
+.pursuit-title {
+  font-weight: 100;
+  font-size: 4rem;
+  font-family: futura;
+}
 #qr_code {
   // background-color: black;
   // svg rect {
@@ -27,6 +32,7 @@
 }
 .main {
     // fallback for old browsers
+  min-height: 100vh;
   background: #141E30;
   // Chrome 10-25, Safari 5.1-6
   background: -webkit-linear-gradient(to top, #243B55, #141E30);
