--- a/app/views/quizzes/qr.html.erb
+++ b/app/views/quizzes/qr.html.erb
@@ -1,8 +1,8 @@
 <div class="main">
   <div class="d-flex justify-content-center">
-    <h1 class="text-white">CinePursuit</h1>
+    <h1 class="text-white mt-5 mb-4 pursuit-title">CinePursuit</h1>
   </div>
-  <div id="qr_code">
+  <div class="mt-5" id="qr_code">
     <div class="qr-instructions">
       <h1 class="text-white mb-2">
         Prêt à challenger les autres spectateurs de la salle ? <br><br>
