--- a/app/views/players/quizzes/show.html.erb
+++ b/app/views/players/quizzes/show.html.erb
@@ -4,7 +4,7 @@
     <h1 class="text-light">Prêt à jouer ?</h1>
       <ul class="list-unstyled mt-5 mb-5">
         <li>
-          <p>Une place pour l'avant-première de <strong><%= @quiz.name %></strong> à gagner !</p>
+          <p>2 places de cinéma à gagner !</p>
         </li>
       </ul>
       <%= link_to "LANCER LE QUIZ", players_quiz_games_path(@quiz), method: :post, class: "btn btn-light btn-lg btn-block" %>
