--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
         <h1 class="font-weight-bold mb-3">
           CinePursuit
         </h1>
-        <h4 class="mb-5 text-light" style="font-weight: 100;">Interagissez avec vos spectateurs, <strong>dans la salle de cinéma</strong></h4>
+        <h4 class="mb-5 text-light" style="font-weight: 100;">Interagissez avec vos spectateurs, <strong><span id="banner-typed-text"></span></strong></h4>
       <!-- </div> -->
     </div>
     <div class="row justify-content-center pb-5">
