--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
     <div class="row justify-content-center pb-5">
       <div class="col-10 col-sm-9 col-md-8 col-lg-5">
         <h6 class="pb-3 text-light">
-          Vous êtes interressé ?<br>Laissez-nous vous tenir au courant
+          Vous êtes interessés ?<br>Laissez-nous vous tenir au courant.
         </h6>
         <%= simple_form_for(Lead.new) do |f| %>
           <%= f.input :email, require: true,
