Create lead when new player created

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="background-landing">
   <div class="navbar mb-5">
     <div class="pt-3 pl-1">
-      <%= link_to root_path do %>
+      <%= link_to root_path, data: { turbolinks: false } do %>
         <%= image_tag 'logo.png', class: 'logo' %>
       <% end %>
     </div>
