--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,9 +21,14 @@
     </div>
     <div class="row justify-content-center pb-5">
       <div class="col-10 col-sm-9 col-md-8 col-lg-5">
-        <h6 class="pb-3 text-light">
+        <%= link_to 'QR code', quiz_qr_path(Quiz.find_by(playable: true)), class: 'btn btn-primary btn-lg btn-block mb-4' %>
+
+        <%= link_to 'Commencer la partie', quiz_qr_path(Quiz.find_by(playable: true)), class: 'btn btn-primary btn-lg btn-light btn-block mb-4' %>
+
+        <h6 class="pb-3 mt-5 text-light">
           Vous êtes interessés ?<br>Laissez-nous vous tenir au courant.
         </h6>
+
         <%= simple_form_for(Lead.new) do |f| %>
           <%= f.input :email, require: true,
                               input_html: {
