--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
       <div class="col-10 col-sm-9 col-md-8 col-lg-5">
         <%= link_to 'QR code', quiz_qr_path(Quiz.find_by(playable: true)), class: 'btn btn-primary btn-lg btn-block mb-4' %>
 
-        <%= link_to 'Commencer la partie', quiz_qr_path(Quiz.find_by(playable: true)), class: 'btn btn-primary btn-lg btn-light btn-block mb-4' %>
+        <%= link_to 'Commencer la partie', new_player_registration_path(quiz: Quiz.find_by(playable: true)), class: 'btn btn-primary btn-lg btn-light btn-block mb-4' %>
 
         <h6 class="pb-3 mt-5 text-light">
           Vous êtes interessés ?<br>Laissez-nous vous tenir au courant.
