--- a/app/views/players/results/index.html.erb
+++ b/app/views/players/results/index.html.erb
@@ -10,5 +10,10 @@
     %>
     </div>
   </div>
+  <div class="row justify-content-center">
+    <div class="col-12">
+      <%= link_to 'Home', destroy_player_session_path, class: 'btn btn-lg btn-light btn-block mt-5', method: :delete %>
+    </div>
+  </div>
 </div>
 <%= render 'shared/players_counter', quiz: @quiz %>
