--- a/app/views/players/quizzes/show.html.erb
+++ b/app/views/players/quizzes/show.html.erb
@@ -1,17 +1,19 @@
-<div class="container mobile-container d-flex flex-column justify-content-center">
-  <div class="row justify-content-center">
-    <div class="col-10 col-sm-8 col-md-6 col-lg-5 text-center">
-    <h1 class="mb-3">🏁</h1>
-    <h1 class="text-light">Prêt à jouer ?</h1>
-      <ul class="list-unstyled mt-5 mb-5">
-        <li>
-          <h4 class="mb-3"><%= @quiz.reward %> à gagner !</h4>
-        </li>
-        <li>
-          <p>Répondez rapidement pour augmenter vos chances</p>
-        </li>
-      </ul>
-      <%= link_to "LANCER LE QUIZ", players_quiz_games_path(@quiz), method: :post, class: "btn btn-light btn-lg btn-block" %>
+<div id="question">
+  <div class="container mobile-container d-flex flex-column justify-content-center">
+    <div class="row justify-content-center">
+      <div class="col-10 col-sm-8 col-md-6 col-lg-5 text-center">
+      <h1 class="mb-3">🏁</h1>
+      <h1 class="text-light">Prêt à jouer ?</h1>
+        <ul class="list-unstyled mt-5 mb-5">
+          <li>
+            <h4 class="mb-3"><%= @quiz.reward %> à gagner !</h4>
+          </li>
+          <li>
+            <p>Répondez rapidement pour augmenter vos chances</p>
+          </li>
+        </ul>
+        <%= link_to "LANCER LE QUIZ", players_quiz_games_path(@quiz), method: :post, class: "btn btn-light btn-lg btn-block", remote: true %>
+      </div>
     </div>
   </div>
 </div>
