--- a/app/assets/stylesheets/config/_mobile_utilities.scss
+++ b/app/assets/stylesheets/config/_mobile_utilities.scss
@@ -18,6 +18,7 @@
   .quiz-img {
     background-size: cover;
     background-position: center;
+    // background-repeat: no-repeat;
     height: 128px;
     width: 128px;
     border-radius: 5%;
