--- a/app/views/quizzes/close.html.erb
+++ b/app/views/quizzes/close.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <div class="d-flex justify-content-center align-items-center">
+      <div class="d-flex justify-content-center align-items-center full-height">
         <% text = @quiz.finish? ? "Reopen Quiz #{@quiz.name}" : "Close quiz #{@quiz.name}" %>
-        <%= link_to text, quiz_path(@quiz), method: :patch, class: "btn btn-primary" %>
+        <%= link_to text, quiz_path(@quiz), method: :patch, class: "btn btn-primary btn-lg btn-block" %>
       </div>
     </div>
   </div>
