--- a/app/views/quizzes/qr.html.erb
+++ b/app/views/quizzes/qr.html.erb
@@ -7,7 +7,7 @@
       <h1 class="text-white mb-2">
         Prêt à challenger les autres spectateurs de la salle ? <br><br>
       </h1>
-      <h2 class="text-white mb-5">A gagner : <%= @quiz.reward %> 😎</h2>
+      <!-- <h2 class="text-white mb-5">A gagner : <%#= @quiz.reward %> 😎</h2> -->
       <h3 class="text-white mb-4">Scannez ce <code>QR-Code</code> pour jouer.</h3>
       <%= image_tag 'hand.jpg', height: '100%', class: 'qr-instructions-img' %>
     </div>
@@ -23,7 +23,7 @@
     <p class="text-white mb-0 text-center">
       Prêt à challenger les autres spectateurs de la salle ? <br><br>
     </p>
-    <p class="text-white mb-2">A gagner : <%= @quiz.reward %> 😎</p>
+    <!-- <p class="text-white mb-2">A gagner : <%#= @quiz.reward %> 😎</p> -->
     <p class="text-white mb-3">Scannez ce <code>QR-Code</code> pour jouer</p>
     <div class="d-flex justify-content-center">
       <div class="qr_square-mobile">
