--- a/app/views/players/results/index.html.erb
+++ b/app/views/players/results/index.html.erb
@@ -2,7 +2,7 @@
   <h3 class="text-center text-white pb-4">
     Résultats
   </h3>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mt-5">
     <div class="col-12 col-sm-11 col-md-10 col-lg-7">
     <%= render 'results_table',
       games: @games,
@@ -10,7 +10,7 @@
     %>
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mb-5">
     <div class="col-12">
       <%= link_to 'Home', destroy_player_session_path, class: 'btn btn-lg btn-light btn-block mt-5', method: :delete %>
     </div>
