--- a/app/views/quizzes/close.html.erb
+++ b/app/views/quizzes/close.html.erb
@@ -3,7 +3,7 @@
     <div class="col-12">
       <div class="d-flex justify-content-center align-items-center full-height">
         <% text = @quiz.finish? ? "Reopen Quiz #{@quiz.name}" : "Close quiz #{@quiz.name}" %>
-        <%= link_to text, quiz_path(@quiz), method: :patch, class: "btn btn-primary btn-lg btn-block" %>
+        <%= link_to text, quiz_path(@quiz), method: :patch, class: "btn btn-primary btn-lg btn-block", data: { confirm: "Are you sure?"} %>
       </div>
     </div>
   </div>
